modified link sections

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="nav">
             <nav>
                 <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#home.html">HOME</a></li>
+                <li><a href="#about.html">ABOUT US</a></li>
+                <li><a href="#services.html">SERVICES</a></li>
+                <li><a href="#sign.html"></a>SIGN UP</li>
                 </ul>
             </nav>
         </div>
