--- a/index.html
+++ b/index.html
@@ -16,16 +16,40 @@
                 <li><a href="#home.html">HOME</a></li>
                 <li><a href="#about.html">ABOUT US</a></li>
                 <li><a href="#services.html">SERVICES</a></li>
-                <li><a href="#sign.html"></a>SIGN UP</li>
+                <li><a href="#sign.html">ORDER</a></li>
                 </ul>
             </nav>
         </div>
         <div class="home">
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
            <h1 id="k2">Pizza Macian</h1>
-           
+           <br>
+           <br>
+           <br>
         </div>
+        <br>
         <div class="images">
-            <img src="">
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="./images/buffalochicken.jpg " width="300" height="200">
+                </div>
+                <div class="col-md-3">
+                    <img src="/images/pepperoni.jpg " width="300" height="200">
+                </div>
+                <div class="col-md-3">
+                    <img src="./images/cheese.cms" width="300" height="200">
+                </div>
+                <div class="col-md-3">
+                    <img src="./images/glutten-free.jpg " width="300" height="200">
+                </div> 
+            </div>
         </div>
 
     </div>
