hover effects added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    
-    <div class="container">
         <div class="nav">
             <nav>
                 <ul>
@@ -35,24 +33,37 @@
            <br>
         </div>
         <br>
+        <div class="container">
         <div class="images">
             <div class="row">
                 <div class="col-md-3">
+                    <div class="card">
                     <img src="./images/buffalochicken.jpg " width="300" height="200">
+                    <p id="m1"></p>
+                    </div>
                 </div>
                 <div class="col-md-3">
+                    <div class="card">
                     <img src="/images/pepperoni.jpg " width="300" height="200">
+                    <p id="m2"></p>
+                    </div>
                 </div>
                 <div class="col-md-3">
+                    <div class="card">
                     <img src="./images/cheese.cms" width="300" height="200">
+                    <p id="m3"></p>
+                    </div>
                 </div>
                 <div class="col-md-3">
+                    <div class="card">
                     <img src="./images/glutten-free.jpg " width="300" height="200">
+                    <p id="m4"></p>
+                    </div>
                 </div> 
             </div>
         </div>
-
     </div>
+
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/scripts.js"></script>   
 </body>
