--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="card">
-                    <img src="./images/buffalochicken.jpg " width="283" height="200">
-                    <p id="m1">Pizza with a little kick of buffalo wing flavor! Have your pizza and wings together</p>
+                    <img src="./images/buffalochicken.jpg " width="283" height="200" class="j1">
+                    <p id="m1">buffalo chicken<br>Pizza</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                    <img src="/images/pepperoni.jpg " width="283" height="200">
-                    <p id="m2">590 calories; protein 19.5g 39% DV; carbohydrates 60.4g 20% DV; fat 29.1g 45% DV; cholesterol 47.5mg 16% DV; sodium 1408.3mg 56% DV. Full Nutrition</p>
+                    <img src="/images/pepperoni.jpg " width="283" height="200" class="j2">
+                    <p id="m2">Pepperoni <br>Pizza</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                    <img src="./images/cheese.cms" width="283" height="200">
-                    <p id="m3">If you refrain from grain, but can't go without pizza...you've got to try this version with a 1-ingredient crust made just from cheese.</p>
+                    <img src="./images/cheese.cms" width="283" height="200" class="j3">
+                    <p id="m3"></p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                    <img src="./images/glutten-free.jpg " width="283" height="200">
+                    <img src="./images/glutten-free.jpg " width="283" height="200" class="j4">
                     <p id="m4">Ready for tasty, crispy pizza crust that's gluten-free</p>
                     </div>
                 </div> 
