--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <div class="container">
         <div class="nav">
             <nav>
                 <ul>
@@ -33,7 +34,6 @@
            <br>
         </div>
         <br>
-        <div class="container">
         <div class="images">
             <div class="row">
                 <div class="col-md-3">
@@ -51,13 +51,40 @@
                 <div class="col-md-3">
                     <div class="card">
                     <img src="./images/cheese.cms" width="283" height="200" class="j3">
-                    <p id="m3"></p>
+                    <p id="m3">Cheese<br>Pizza </p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
                     <img src="./images/glutten-free.jpg " width="283" height="200" class="j4">
                     <p id="m4">Ready for tasty, crispy pizza crust that's gluten-free</p>
+                    </div>
+                </div> 
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="card">
+                    <img src="./images/pex.jpeg " width="283" height="200" class="j5">
+                    <p id="m5"></p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                    <img src="./images/pex1.webp " width="283" height="200" class="j6">
+                    <p id="m6"></p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                    <img src="./images/pex2.jpeg" width="283" height="200" class="j7">
+                    <p id="m7"></p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                    <img src="./images/images.jpeg" width="283" height="200" class="j8">
+                    <p id="m8"></p>
                     </div>
                 </div> 
             </div>
