modified about us section

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div class="nav">
             <nav>
                 <ul>
-                <li><a href="#home.html">HOME</a></li>
-                <li><a href="#about.html">ABOUT US</a></li>
-                <li><a href="#services.html">SERVICES</a></li>
-                <li><a href="#sign.html">ORDER</a></li>
+                <li><a href="#home">HOME</a></li>
+                <li><a href="#about">ABOUT US</a></li>
+                <li><a href="#menu">MENU</a></li>
+                <li><a href="#sign">ORDER</a></li>
                 </ul>
             </nav>
         </div>
@@ -30,7 +30,7 @@
             <br>
            <h1 id="k2">Pizza Macian</h1>
            <br>
-           <br>
+           <h2 id="k3">YOUR TABLE IS ALWAYS WAITING.</h2>
            <br>
         </div>
         <br>
@@ -88,6 +88,12 @@
                     </div>
                 </div> 
             </div>
+        </div>
+        <div class="us">
+            <div id="about">
+                <p>The Pizza macian story began with friends who worked as pizza dilivery boys while attending college. These  friends always had a passion for food and cooking, and now they bring that excitement to your local pizza shop. Growing up, they always had a pizza night, a night that consistently brought something more to the table than just pizza. The pizza night held a special place in their hearts, reminding them of that quality time they would spend with their family, enjoying each other’s company. In honor of those memories, there is a pizza special every night of the week at pizza macian, encouraging our loyal customers to enjoy a pizza and some valuable time with their loved ones in an effort to keep the ideology of pizza night alive.</p>
+            </div>
+            
         </div>
     </div>
 
