--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="home">
+        <div id="home">
             <br>
             <br>
             <br>
@@ -89,12 +89,87 @@
                 </div> 
             </div>
         </div>
+        <br>
         <div class="us">
             <div id="about">
+                <h2 id="bot">ABOUT US</h2>
+                <h3 id="bot">THE MACIAN'S STORY</h3>
                 <p>The Pizza macian story began with friends who worked as pizza dilivery boys while attending college. These  friends always had a passion for food and cooking, and now they bring that excitement to your local pizza shop. Growing up, they always had a pizza night, a night that consistently brought something more to the table than just pizza. The pizza night held a special place in their hearts, reminding them of that quality time they would spend with their family, enjoying each other’s company. In honor of those memories, there is a pizza special every night of the week at pizza macian, encouraging our loyal customers to enjoy a pizza and some valuable time with their loved ones in an effort to keep the ideology of pizza night alive.</p>
                 <p>Pizza macian staff are always striving to bring creative and exciting pizza items to you, the customer. no combination is too unreasonable and the idea that you can be as creative as you want is easily seen in their glass display counters. The macians have a combined 5 years in the pizza business and each new day brings a new challenge to create something never seen before. The staff looks at each dough ball as a blank canvas, an opportunity to create something bold and new. The pizza macians has created over 50 different pizzas in its existence and plans to create well over 50 more. Whether it’s our classic stuffed pies that our customers have come to love or our constantly changing “pizza of the week”, the counter selection is sure to never disappoint. From our family to yours, thank you for letting The pizza macian be your go to pizzeria. Call in, stop by, order on-line, have us deliver to your door step, and enjoy one of our many specialty items or show us what you’ve got and make your own delicious creation!</p>
             </div>
             
+        </div>
+        <br>
+        <div id="menu">
+         <h3>MENU</h3>
+       
+        </div>
+        <br>
+        <div id="sign">
+            <form action="">
+                <label for="name">NAME</label>
+                <input type="text" class="form-control" name="name" id="name" placeholder="ENTER NAME" required>
+                <label for="">Pizza</label>
+                <select class="custom-select my-1 mr-sm-2" id="pizzatype" required>
+        <option class="form-group" ></option>
+        <option value="Margherita Pizza">Margherita Pizza</option>
+        <option value="Pepperoni Pizza">Pepperoni Pizza</option>
+        <option value="BBQ Chicken Pizza">BBQ Chicken Pizza</option>
+        <option value="Hawaiian Pizza.">Hawaiian Pizza.</option>
+        <option value="Meat-Lover's Pizza">Meat-Lover's Pizza</option>
+        <option value="Chicken Alfredo Pizza">Chicken Alfredo Pizza</option>
+      </select>
+                <label for="size">SIZE</label>
+                <select class="custom-select my-1 mr-sm-2" id="size" required>
+        <option ></option>
+        <option>Small</option>
+        <option>Medium</option>
+        <option>Large</option>
+      </select>
+                <label for="crust">CRUST</label>
+                <select class="custom-select my-1 mr-sm-2" id="crust">
+          <option selected id="crust"></option>
+          <option value="crispy">Crispy</option>
+          <option value="stuffed">Stuffed </option>
+          <option value="gluten-free">Gluten</option>
+        </select>
+                <label for="number">NO OF PIZZA</label>
+                <input type="number" class="form-control" name="pizza-no" id="pizza-no" placeholder="NO OF PIZZA">
+                <label for="topping">TOPPINGS</label>
+                <div class="row">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="toppings" value="Mushrooms" id="mushrooms">
+                        <label class="form-check-label" for="mushrooms">Mushroom</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="mushroom" value="mushroom" name="topping">
+                        <label class="form-check-label" for="exampleCheck1">Mushrooms</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="sausage" value="sausage" name="topping">
+                        <label class="topping" for="topping">Sausage.</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="bacon" value="bacon" name="topping">
+                        <label class="topping" for="topping">Bacon</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="blackolive" value="blackolive" name="topping">
+                        <label class="topping" for="topping">Black olives</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="green papper" name="topping">
+                        <label class="topping" for="topping">Green peppers</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="onions" name="topping">
+                        <label class="topping" for="topping">Onions</label>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-warning" id="firstselect" onclick="orderNow()">ORDER</button>
+            </form>
         </div>
     </div>
 
