logical operators for small sized pizza

--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
                 <input type="text" class="form-control" name="name" id="name" placeholder="" required>
                 <label for="">Pizza</label>
                 <select class="custom-select my-1 mr-sm-2" id="type" required>
-                    <option class="form-group"></option>
-                    <option value="Margherita Pizza">Margherita Pizza</option>
-                    <option value="Pepperoni Pizza">Pepperoni Pizza</option>
-                    <option value="BBQ Chicken Pizza">BBQ Chicken Pizza</option>
-                    <option value="Hawaiian Pizza.">Hawaiian Pizza.</option>
-                    <option value="Meat-Lover's Pizza">Meat-Lover's Pizza</option>
-                    <option value="Chicken Alfredo Pizza">Chicken Alfredo Pizza</option>
+                    <option></option>
+                    <option>Margherita Pizza</option>
+                    <option>Pepperoni Pizza</option>
+                    <option>BBQ Chicken Pizza</option>
+                    <option>Hawaiian Pizza.</option>
+                    <option>Meat-Lover's Pizza</option>
+                    <option>Chicken Alfredo Pizza</option>
                 </select>
                 <label for="size">Size</label>
                 <select class="custom-select my-1 mr-sm-2" id="size" required>
