cust price included in js file

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <option selected id="crust"></option>
                     <option value="crispy">Crispy</option>
                     <option value="stuffed">Stuffed </option>
-                    <option value="gluten-free">Gluten</option>
+                    <option value="gluten-free">Gluten-free</option>
                 </select>
                 <label for="number">No of pizza</label>
                 <input type="number" class="form-control" name="pizza" id="piz" placeholder="">
