deleted awesome images

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
             <nav>
                 <ul>
                     <li><a href="#home">HOME</a></li>
-                    <li><a href="#about">ABOUT US</a></li>---
-                    <li><a href="#menu">MENU</a></li>
+                    <li><a href="#about">ABOUT US</a></li>
                     <li><a href="#sign">ORDER</a></li>
                 </ul>
             </nav>
@@ -119,84 +118,6 @@
 
         </div>
         <br>
-        <div id="menu">
-            <div class="wrapper">
-                <div class="title">
-                    <h4><span>your table is always waiting</span>menu</h4>
-                </div>
-                <div class="menu">
-                    <div class="single-menu">
-                    
-                            <img src="./images/buffalochicken.jpg">
-                            <div class="menu-content">
-                                <h4>chicken fried salad<span>$45</span></h4>
-                            </div>
-
-                        </div>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="single-menu">
-
-
-                    <img src="./images/buffalochicken.jpg">
-                    <div class="menu-content">
-                        <h4>chicken fried salad<span>$45</span></h4>
-                    </div>
-
-
-                </div>
-            </div>
-            <div class="menu">
-                <div class="single-menu">
-
-
-                    <img src="./images/buffalochicken.jpg">
-                    <div class="menu-content">
-                        <h4>chicken fried salad<span>$45</span></h4>
-                    </div>
-
-
-                </div>
-            </div>
-            <div class="menu">
-                <div class="single-menu">
-
-
-                    <img src="./images/buffalochicken.jpg">
-                    <div class="menu-content">
-                        <h4>chicken fried salad<span>$45</span></h4>
-                    </div>
-
-
-                </div>
-            </div>
-            <div class="menu">
-                <div class="single-menu">
-
-
-                    <img src="./images/buffalochicken.jpg">
-                    <div class="menu-content">
-                        <h4>chicken fried salad<span>$45</span></h4>
-                    </div>
-
-
-                </div>
-            </div>
-            <div class="menu">
-                <div class="single-menu">
-
-
-                    <img src="./images/buffalochicken.jpg">
-                    <div class="menu-content">
-                        <h4>chicken fried salad<span>$45</span></h4>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
-        <br>
          <div id="sign">
             <div class="container-fluid order" id="make-order">
                 <div class="order-overlay">
@@ -295,7 +216,7 @@
                                     </table>
                                     <p id="pizzatotal"></p>
                                     <p id="totalbill"></p>
-                                    <p id="addedprice">Delivery fee 150</p>
+                                    <p id="addedprice">Delivery fee 200</p>
                                     <p id="finallmessage"></p>
                                 </div>
                                 <button class="btn btn-secondary  bg-primary addPizza">Add Pizza</button>
