added root folder

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/images/pepperoni.jpg " width="283" height="200" class="j2">
+                        <img src="./images/pepperoni.jpg " width="283" height="200" class="j2">
                         <p id="m2">Pepperoni <br>Pizza</p>
                     </div>
                 </div>
